--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="voilet">#0c2743</color>
+    <color name="red">#ea656c</color>
+    <color name="gray">#8293a4</color>
 </resources>
