--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_red">#ff6961</color>
+    <color name="light_green">#97EBF4</color>
+    <color name="light_blue">#B7E2FC</color>
+    <color name="light_gray">#E8E8E8</color>
 </resources>
