--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
     <color name="voilet">#0c2743</color>
     <color name="red">#ea656c</color>
     <color name="gray">#8293a4</color>
+    <color name="orange_startup">#ff6961</color>
+    <color name="navyblue_body">#768ca0</color>
+    <color name="blue_main">#113759</color>
+    <color name="white_startup">#ffffff</color>
+
 </resources>
