--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,4 +36,9 @@
     <dimen name="dp_48">48dp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_123">123dp</dimen>
+    <dimen name="dp_0">0dp</dimen>
+    <dimen name="sp_50">50sp</dimen>
+    <dimen name="dp_500">500dp</dimen>
+    <dimen name="sp_30">30sp</dimen>
+    <dimen name="dp_3">3dp</dimen>
 </resources>
