--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -66,7 +66,7 @@
                     style="@style/Filter_TextView"
                     android:layout_marginTop="@dimen/dp_10"
                     android:drawableEnd="@drawable/ic_gender"
-                    android:text="@string/age" />
+                    android:text="@string/gender" />
 
                 <TextView
                     style="@style/Filter_TextView"
