--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -25,7 +25,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/dp_1</item>
         <item name="android:layout_marginLeft">@dimen/dp_20</item>
-        <item name="android:layout_marginTop">@dimen/dp_20</item>
+        <item name="android:layout_marginTop">@dimen/dp_10</item>
         <item name="android:layout_marginRight">@dimen/dp_20</item>
         <item name="android:background">@color/light_gray</item>
 
@@ -37,6 +37,7 @@
         <item name="android:orientation">vertical</item>
 
     </style>
+
     <style name="Filter_Headings">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -45,6 +46,31 @@
         <item name="android:layout_margin">@dimen/dp_20</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="RadioButtonText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/dp_20</item>
+        <item name="android:textSize">@dimen/sp_20</item>
+    </style>
+
+    <style name="RadioButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/dp_20</item>
+
+    </style>
+    <style name="Buttons">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/dp_25</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/sp_20</item>
+        <item name="android:background">@drawable/rounded_rec_orange</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
 
 </resources>
