--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-            
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -659,6 +659,17 @@
         android:layout_weight="1"
         android:src="@drawable/ic_user"/>
 </LinearLayout>
+
+    <ImageView
+        android:id="@+id/ivFilter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_filters"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:background="@drawable/filter_bg"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
