--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,4 +41,5 @@
     <dimen name="dp_500">500dp</dimen>
     <dimen name="sp_30">30sp</dimen>
     <dimen name="dp_3">3dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
 </resources>
