--- a/app/src/main/res/drawable/ic_heart.xml
+++ b/app/src/main/res/drawable/ic_heart.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="50dp"
-    android:height="50dp"
+    android:width="@dimen/dp_30"
+    android:height="@dimen/dp_30"
     android:viewportWidth="512.001"
     android:viewportHeight="512">
   <path
