--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,4 +42,6 @@
     <dimen name="sp_30">30sp</dimen>
     <dimen name="dp_3">3dp</dimen>
     <dimen name="dp_200">200dp</dimen>
+    <dimen name="dp_150">150dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
 </resources>
