--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -30,6 +30,13 @@
         <item name="android:background">@color/light_gray</item>
 
     </style>
+    <style name="Filter_Fulllineview">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_1</item>
+        <item name="android:layout_marginTop">@dimen/dp_10</item>
+        <item name="android:background">@color/light_gray</item>
+
+    </style>
 
     <style name="Filter_LinearLayout">
         <item name="android:layout_width">match_parent</item>
