working on design of start page

--- a/app/src/main/res/layout/activity_start__page.xml
+++ b/app/src/main/res/layout/activity_start__page.xml
@@ -3,147 +3,182 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/voilet"
     android:layout_height="match_parent"
+    android:background="@color/voilet"
     tools:context=".Start_Page">
 
     <ImageButton
         android:id="@+id/ibDropDownList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/ivImageBackground"
-        app:layout_constraintLeft_toLeftOf="@id/ivImageBackground"
-        app:layout_constraintTop_toTopOf="@id/ivImageBackground"
-        android:layout_marginTop="@dimen/dp_10"
-        android:src="@drawable/drop_down_icon"
-        android:layout_marginEnd="@dimen/dp_20"
+        android:layout_margin="@dimen/dp_20"
         android:background="@color/voilet"
-        />
+        android:src="@drawable/ic_more"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivImageBackground"
-        android:layout_width="350dp"
-        android:layout_height="@dimen/dp_350"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/jaumo_bg_image"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.089"
-        />
+        app:layout_constraintVertical_bias="0.073" />
 
     <TextView
         android:id="@+id/tvHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_50"
+        android:drawableStart="@drawable/bg_image"
         android:text="JAUMO"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_45"
-        android:drawableStart="@drawable/bg_image"
-        android:drawablePadding="@dimen/dp_10"
-        app:layout_constraintTop_toTopOf="@id/ivImageBackground"
-        app:layout_constraintBottom_toBottomOf="@id/ivImageBackground"
-        app:layout_constraintStart_toStartOf="@id/ivImageBackground"
-        android:layout_marginStart="@dimen/dp_30"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ibDropDownList" />
 
     <TextView
+        android:id="@+id/tv_find_someone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvHeading"
+        android:layout_margin="@dimen/dp_10"
         android:text="@string/find_your_someone"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_22"
-        app:layout_constraintEnd_toEndOf="@id/tvHeading"
         app:layout_constraintStart_toStartOf="@id/tvHeading"
-        />
-
+        app:layout_constraintTop_toBottomOf="@id/tvHeading" />
 
     <Button
         android:id="@+id/btnSignUp"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        app:layout_constraintTop_toBottomOf="@id/ivImageBackground"
-        android:layout_marginTop="@dimen/dp_60"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginRight="@dimen/dp_20"
         android:background="@drawable/rectangle_red_bg"
-        android:layout_marginStart="@dimen/dp_20"
-        android:layout_marginEnd="@dimen/dp_20"
+        android:padding="@dimen/dp_5"
+        android:layout_marginBottom="@dimen/dp_20"
         android:text="@string/sign_up"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="@dimen/sp_24"
+        android:textSize="@dimen/sp_20"
         android:textStyle="bold"
-        android:textAllCaps="false"/>
-
+        app:layout_constraintBottom_toTopOf="@+id/btnGoogleSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnGoogleSignUp"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
-        android:layout_marginTop="@dimen/dp_20"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_20"
         android:background="@drawable/rectangle_white_bg"
-        android:layout_marginStart="@dimen/dp_20"
-        android:layout_marginEnd="@dimen/dp_20"
-        android:text="Sign up with Google"
-        android:textSize="@dimen/sp_24"
-        android:textStyle="bold"
         android:drawableLeft="@drawable/ic_google_icon"
-        android:textAllCaps="false"/>
+        android:padding="@dimen/dp_5"
+        android:textAllCaps="false"
+        android:text="Sign up with Google"
+        android:textSize="@dimen/sp_20"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/tvPolicy"></Button>
 
     <TextView
         android:id="@+id/tvPolicy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_10"
         android:text="@string/signing_in_policy"
-        app:layout_constraintTop_toBottomOf="@id/btnGoogleSignUp"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/sp_14"
+        android:layout_marginBottom="@dimen/dp_30"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_30"
-        android:textColor="@color/gray"
-        android:textSize="@dimen/sp_15"/>
-
+        app:layout_constraintBottom_toTopOf="@id/tvHaveAccount"
+        />
 
     <TextView
         android:id="@+id/tvHaveAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvPolicy"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="@dimen/dp_10"
         android:text="@string/have_account"
         android:textColor="@color/white"
-        android:layout_marginTop="@dimen/dp_50"
         android:textSize="@dimen/sp_15"
-        />
-
+        app:layout_constraintBottom_toTopOf="@id/tvLogin"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvHaveAccount"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="@dimen/dp_20"
         android:text="@string/log_in"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="@dimen/dp_10"
         android:textColor="@color/white"
-        android:textSize="@dimen/sp_24"/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        android:textSize="@dimen/sp_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--
+     <Button
+            android:id="@+id/btnSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            android:layout_marginTop="@dimen/dp_40"
+            android:background="@drawable/rectangle_red_bg"
+            android:layout_margin="@dimen/dp_20"
+            android:text="@string/sign_up"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_24"
+            android:textStyle="bold"
+            android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btnGoogleSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
+            android:layout_marginTop="@dimen/dp_20"
+            android:background="@drawable/rectangle_white_bg"
+            android:layout_marginStart="@dimen/dp_20"
+            android:layout_marginEnd="@dimen/dp_20"
+            android:text="Sign up with Google"
+            android:textSize="@dimen/sp_24"
+            android:textStyle="bold"
+            android:drawableLeft="@drawable/ic_google_icon"
+            android:textAllCaps="false"/>
+        <TextView
+            android:id="@+id/tvPolicy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signing_in_policy"
+            app:layout_constraintTop_toBottomOf="@id/btnGoogleSignUp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_30"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/sp_15"/>
+        <TextView
+            android:id="@+id/tvHaveAccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tvPolicy"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:text="@string/have_account"
+            android:textColor="@color/white"
+            android:layout_marginTop="@dimen/dp_10"
+            android:textSize="@dimen/sp_15"
+            />
+
+    -->
