--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -141,9 +141,9 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="@dimen/dp_20"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:layout_editor_absoluteX="20dp" />
+        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
     <include
         android:id="@+id/bottom_bar"
         layout="@layout/bottom_bar"
