--- a/app/src/main/res/layout/activity_age_.xml
+++ b/app/src/main/res/layout/activity_age_.xml
@@ -52,6 +52,7 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="@dimen/dp_60"
         android:layout_marginTop="@dimen/dp_40"
+        android:inputType="date"
         android:hint="@string/hint_month"
         android:textColorHint="@color/black"
         android:textSize="@dimen/sp_28"
