--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -23,7 +23,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="716dp"
                 android:layout_gravity="center"
                 android:background="@drawable/men_one"
                 android:orientation="vertical">
@@ -585,7 +585,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_70"
-    app:layout_constraintBottom_toTopOf="@id/llBottom"
+    app:layout_constraintBottom_toTopOf="@id/bottom_bar"
     android:layout_marginBottom="@dimen/dp_40">
 
     <ImageView
@@ -614,54 +614,66 @@
 
 
 
-
-<LinearLayout
-    android:id="@+id/llBottom"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_50"
-    android:background="@color/white"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent">
-
-<ImageView
-    android:id="@+id/ibRefresh"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:src="@drawable/ic_blank_page"/>
-
-    <ImageView
-        android:id="@+id/ibLocation"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/bottom_bar"
+        layout="@layout/bottom_bar"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/ic_pin"/>
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+    </include>
+
+
+<!--<LinearLayout-->
+<!--    android:id="@+id/llBottom"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="@dimen/dp_50"-->
+<!--    android:background="@color/white"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintLeft_toLeftOf="parent"-->
+<!--    app:layout_constraintRight_toRightOf="parent">-->
+
+<!--<ImageView-->
+<!--    android:id="@+id/ibRefresh"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_weight="1"-->
+<!--    android:src="@drawable/ic_blank_page"/>-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/ibLocation"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="1"-->
+<!--        android:src="@drawable/ic_pin"/>-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/ibHeart"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="1"-->
+<!--        android:src="@drawable/ic_heart"/>-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/ibChat"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="1"-->
+<!--        android:src="@drawable/ic_chat"/>-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/ibUser"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="1"-->
+<!--        android:src="@drawable/ic_user"/>-->
+<!--</LinearLayout>-->
 
     <ImageView
-        android:id="@+id/ibHeart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/ic_heart"/>
-
-    <ImageView
-        android:id="@+id/ibChat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/ic_chat"/>
-
-    <ImageView
-        android:id="@+id/ibUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/ic_user"/>
-</LinearLayout>
-
-    <ImageView
-        android:id="@+id/ivFilter"
+        android:id="@+id/ivFilter_men"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_filters"
