--- a/app/src/main/res/layout/activity_home__page__women.xml
+++ b/app/src/main/res/layout/activity_home__page__women.xml
@@ -579,7 +579,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_70"
-        app:layout_constraintBottom_toTopOf="@id/llBottom"
+        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
         android:layout_marginBottom="@dimen/dp_40">
 
         <ImageView
@@ -608,61 +608,75 @@
 
 
 
-
-    <LinearLayout
-        android:id="@+id/llBottom"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:background="@color/white"
+    <include
+        android:id="@+id/bottom_bar"
+        layout="@layout/bottom_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
-        <ImageView
-            android:id="@+id/ibRefresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_blank_page"/>
+    </include>
 
-        <ImageView
-            android:id="@+id/ibLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_pin"/>
 
-        <ImageView
-            android:id="@+id/ibHeart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_heart"/>
 
-        <ImageView
-            android:id="@+id/ibChat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_chat"/>
 
-        <ImageView
-            android:id="@+id/ibUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_user"/>
-    </LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:id="@+id/llBottom"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="@dimen/dp_50"-->
+<!--        android:background="@color/white"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/ibRefresh"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/ic_blank_page"/>-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/ibLocation"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="19dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/ic_pin" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/ibHeart"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/ic_heart"/>-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/ibChat"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/ic_chat"/>-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/ibUser"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/ic_user"/>-->
+<!--    </LinearLayout>-->
 
     <ImageView
-        android:id="@+id/ivFilter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_filters"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/ivFilter_women"
+        android:layout_width="24dp"
+        android:layout_height="26dp"
         android:layout_marginLeft="@dimen/dp_10"
         android:layout_marginTop="@dimen/dp_50"
-        android:background="@drawable/filter_bg"/>
+        android:background="@drawable/filter_bg"
+        android:src="@drawable/ic_filters"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
