Added Sent Likes

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -121,6 +121,7 @@
             style="@style/Filter_LinearLayout">
 
             <TextView
+                android:id="@+id/tvSentLikes"
                 style="@style/Filter_TextView"
                 android:layout_marginTop="@dimen/dp_10"
                 android:drawableEnd="@drawable/ic_likes_heart"
